--- a/Mycura/netlify.toml
+++ b/Mycura/netlify.toml
@@ -1,6 +1,4 @@
-[build]
-command = "npm run build"  # Replace with your build command
-publish = "dist"  # Replace with the build output directory
-
-[build.publish]
-directory = "C:\Users\siddharth.s\Documents\MyCura.com\Mycura"
+[[redirects]]
+from="/*"
+to="/index.html"
+status=200
